# RM_Exam

./: README.md
controller/: ActualPoseFile.txt  CMakeLists.txt  package.xml
controller/Traiettoria/: Matlab_Plotter_general.m
controller/Traiettoria/NORID_NOFORCE_MKD/: ActualPoseFile.txt  CompliancePosFile.txt  DesiredVelFile.txt  ErrorFile.txt  ForceFile.txt  Matlab_Plotter_particular.m  QFile.txt  QdFile.txt
controller/Traiettoria/RID1_LINFORCE_M15K10D5/: ActualPoseFile.txt  CompliancePosFile.txt  ComplianceVelFile.txt  DesiredPosFile.txt  DesiredVelFile.txt  ErrorFile.txt  ForceFile.txt  Matlab_Plotter_particular.m  QFile.txt  QdFile.txt
controller/Traiettoria/RID1_LINFORCE_M15K1D5/: ActualPoseFile.txt  CompliancePosFile.txt  ComplianceVelFile.txt  DesiredPosFile.txt  DesiredVelFile.txt  ErrorFile.txt  ForceFile.txt  Matlab_Plotter_particular.m  QFile.txt  QdFile.txt
controller/Traiettoria/RID1_LINFORCE_M15K50D5/: ActualPoseFile.txt  CompliancePosFile.txt  ComplianceVelFile.txt  DesiredPosFile.txt  DesiredVelFile.txt  ErrorFile.txt  ForceFile.txt  QFile.txt  QdFile.txt
controller/Traiettoria/RID1_LINFORCE_M15K5D5/: ActualPoseFile.txt  CompliancePosFile.txt  ComplianceVelFile.txt  DesiredPosFile.txt  DesiredVelFile.txt  ErrorFile.txt  ForceFile.txt  QFile.txt  QdFile.txt
controller/Traiettoria/RID1_LINFORCE_M1K50D1/: ActualPoseFile.txt  CompliancePosFile.txt  (+8 more)
controller/include/: iiwa.h  iiwa_kinematics.h  iiwa_trajectory.h
controller/launch/: iiwa7_upload.launch
controller/src/: controllo_forza.cpp  iiwa.cpp  iiwa_kinematics.cpp  iiwa_trajectory.cpp
(+46 files in other folders)
